--- a/site/research/index.html
+++ b/site/research/index.html
@@ -457,8 +457,9 @@ out this situation.</p>
 <li>
 <p>2023: K. Zambello, D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami <em>et
 al.</em>, "Determination of Lee-Yang edge singularities in QCD by rational
-approximations", PoS(LATTICE2022)164, <code>arXiv</code>: 
-<a href="https://arxiv.org/abs/2301.03952">2301.03952</a>.</p>
+approximations", PoS(LATTICE2022)164, 
+<code>DOI</code>:<a href="https://doi.org/10.22323/1.430.0164">10.22323/1.430.0164</a>
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2301.03952">2301.03952</a>.</p>
 </li>
 <li>
 <p>2022: C. Schmidt, D. A. Clarke, P. Dimopoulos, J. Goswami, G. Nicotra
@@ -478,6 +479,7 @@ location of a possible critical endpoint in the QCD phase diagram. We also use
 <li>
 <p>2022: D. A. Clarke, "Isothermal and isentropic speed of sound in (2+1)-flavor
 QCD at non-zero baryon chemical potential" PoS(LATTICE2022)147,
+<code>DOI</code>:<a href="https://doi.org/10.22323/1.430.0147">10.22323/1.430.0147</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2212.10009">2212.10009</a>.</p>
 </li>
 <li>
