--- a/site/research/index.html
+++ b/site/research/index.html
@@ -561,7 +561,13 @@ scales for pure SU(2) lattice gauge theory", Phys. Rev. D, 95, <code>DOI</code>:
             includes modules for measurement of various observables.
             It can run on both NVIDIA and AMD GPUs.</p>
 <ul>
-<li>2021: L. Altenkort, D. Bollweg, D. A. Clarke, O. Kaczmarek, L. Mazur
+<li>2023: L. Mazur, D. Bollweg, D. A. Clarke, L. Altenkort, O. Kaczmarek
+<em>et al.</em>,
+      "HotQCD on Multi-GPU Systems",
+      396 PoS(LATTICE2021)196,
+      <code>arXiv</code>:
+           <a href="https://arxiv.org/abs/2306.01098">2306.01098</a>.</li>
+<li>2021: D. Bollweg, L. Altenkort, D. A. Clarke, O. Kaczmarek, L. Mazur
 <em>et al.</em>,
       "HotQCD on Multi-GPU Systems",
       396 PoS(LATTICE2021)196,
