--- a/site/teaching/index.html
+++ b/site/teaching/index.html
@@ -406,6 +406,8 @@
 <p><em>Instructor of Record</em></p>
 <ul>
 <li>Student Research Initiative: Computational Methods for Hot Nuclear
+Matter, Summer 2023.</li>
+<li>Student Research Initiative: Computational Methods for Hot Nuclear
 Matter, Spring 2023.</li>
 </ul>
 <h2 id="bielefeld-university">Bielefeld University</h2>
