--- a/site/index.html
+++ b/site/index.html
@@ -2,6 +2,8 @@
 <!doctype html>
 <html lang="en" class="no-js">
   <head>
+
+      <meta name="google-site-verification" content="_b3dXr78kgJfZYoWGpBsW0VDVj9iQUkcBfIJUIlibw8" />
     
       <meta charset="utf-8">
       <meta name="viewport" content="width=device-width,initial-scale=1">
