--- a/site/research/index.html
+++ b/site/research/index.html
@@ -453,7 +453,7 @@ out this situation.</p>
 <p>2023: K. Zambello, D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami <em>et
 al.</em>, "Determination of Lee-Yang edge singularities in QCD by rational
 approximations", PoS(LATTICE2022)164, 
-<code>DOI</code>:<a href="https://doi.org/10.22323/1.430.0164">10.22323/1.430.0164</a>
+<code>DOI</code>: <a href="https://doi.org/10.22323/1.430.0164">10.22323/1.430.0164</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2301.03952">2301.03952</a>.</p>
 </li>
 <li>
@@ -476,13 +476,13 @@ location of a possible critical endpoint in the QCD phase diagram. We also use
 <em>et al.</em>, "Equation of state and speed of sound of (2+1)-flavor QCD
 in strangeness-neutral matter at non-vanishing net baryon-number
 density" 
-<code>DOI</code>:<a href="https://doi.org/10.1103/PhysRevD.108.014510">10.1103/PhysRevD.108.014510</a>
+<code>DOI</code>: <a href="https://doi.org/10.1103/PhysRevD.108.014510">10.1103/PhysRevD.108.014510</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2212.09043">2212.09043</a>.</p>
 </li>
 <li>
 <p>2022: D. A. Clarke, "Isothermal and isentropic speed of sound in (2+1)-flavor
 QCD at non-zero baryon chemical potential" PoS(LATTICE2022)147,
-<code>DOI</code>:<a href="https://doi.org/10.22323/1.430.0147">10.22323/1.430.0147</a>
+<code>DOI</code>: <a href="https://doi.org/10.22323/1.430.0147">10.22323/1.430.0147</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2212.10009">2212.10009</a>.</p>
 </li>
 </ul>
@@ -578,6 +578,12 @@ for analyzing physics data, in particular targeting lattice QCD. It includes
 statistics modules, such as general jackknife and bootstrap error bar calculators;
 physics modules, for instance allowing hadron resonance gas model calculations; 
 and it also includes moderate interfacing with HotQCD and MILC software.</p>
+<ul>
+<li>2023: L. Altenkort, D. A. Clarke, J. Goswami, H. Sandmeyer,
+"Streamlined data analysis in Python"
+      <code>arXiv</code>:
+           <a href="https://arxiv.org/abs/2308.06652">2308.06652</a></li>
+</ul>
 
 
 
