--- a/site/teaching/index.html
+++ b/site/teaching/index.html
@@ -418,8 +418,13 @@ first-year undergraduates to lattice field theory.
 This was made possible through the
 <a href="https://science.utah.edu/sri/">Science Research Initiative</a>.</p>
 <h2 id="university-of-utah">University of Utah</h2>
+<p><em>Lecturer</em></p>
+<ul>
+<li><a href="https://utah.instructure.com/courses/890824">Energy and Sustainability</a>, Fall 2023.</li>
+</ul>
 <p><em>Instructor of Record</em></p>
 <ul>
+<li><a href="https://github.com/clarkedavida/Computational-Methods-for-Hot-Nuclear-Matter">Computational Methods for Hot Nuclear Matter</a>, Fall 2023.</li>
 <li><a href="https://github.com/clarkedavida/Computational-Methods-for-Hot-Nuclear-Matter">Computational Methods for Hot Nuclear Matter</a>, Summer 2023.</li>
 <li><a href="https://github.com/clarkedavida/Computational-Methods-for-Hot-Nuclear-Matter">Computational Methods for Hot Nuclear Matter</a>, Spring 2023.</li>
 </ul>
