--- a/site/outreach/index.html
+++ b/site/outreach/index.html
@@ -369,7 +369,7 @@
 <h1 id="outreach">Outreach</h1>
 <h2 id="diversity-and-inclusion">Diversity and inclusion</h2>
 <ul>
-<li>2023-present: UoU PASSAGE Member</li>
+<li>2023-present: UoU <a href="https://www.physics.utah.edu/passage/">PASSAGE</a> Member</li>
 <li>2021-2022: CRC-TR211 Equal Opportunity Committee Member</li>
 <li>2017-2018: APS Academic Peer Mentor</li>
 <li>2016-2018: APS Bridge Program Mentor</li>
