--- a/site/research/index.html
+++ b/site/research/index.html
@@ -452,15 +452,39 @@ out this situation.</p>
 <summary>Publications</summary>
 <ul>
 <li>
-<p>2023: K. Zambello, D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami <em>et
-al.</em>, "Determination of Lee-Yang edge singularities in QCD by rational
-approximations", PoS(LATTICE2022)164, 
+<p>2024: F. Di Renzo, D. A. Clarke, P. Dimopoulos, C. Schmidt, J. Goswami <em>et al.</em>
+ "Detecting Lee-Yang/Fisher singularities by multi-point Padè",
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.09619">2401.09619</a></p>
+</li>
+<li>
+<p>2024: D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami, C. Schmidt <em>et al.</em> 
+"Searching for the QCD critical point using Lee-Yang edge 
+singularities",
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.08820">2401.08820</a></p>
+</li>
+<li>
+<p>2024: C. Schmidt, D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami <em>et al.</em> 
+"Universal scaling and the asymptotic behaviour of Fourier 
+coefficients of the baryon-number density in QCD",
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.07790">2401.07790</a></p>
+</li>
+<li>
+<p>2024: J. Goswami, D. A. Clarke, P. Dimopoulos, F. Di Renzo, C. Schmidt <em>et al.</em> 
+"Exploring the Critical Points in QCD with Multi-Point Padé and 
+Machine Learning Techniques in (2+1)-flavor QCD",
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.05651">2401.05651</a></p>
+</li>
+<li>
+<p>2023: K. Zambello, D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami <em>et al.</em> 
+"Determination of Lee-Yang edge singularities in QCD by rational
+approximations", 
+PoS(LATTICE2022)164, 
 <code>DOI</code>: <a href="https://doi.org/10.22323/1.430.0164">10.22323/1.430.0164</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2301.03952">2301.03952</a>.</p>
 </li>
 <li>
-<p>2022: C. Schmidt, D. A. Clarke, P. Dimopoulos, J. Goswami, G. Nicotra
-et al., "Detecting critical points from Lee-Yang edge singularities in
+<p>2022: C. Schmidt, D. A. Clarke, P. Dimopoulos, J. Goswami, G. Nicotra <em>et al.</em> 
+"Detecting critical points from Lee-Yang edge singularities in
 lattice QCD", Acta Phys. Pol. B Proc. Suppl. 16, 1-A52, <code>DOI</code>:
 <a href="https://www.actaphys.uj.edu.pl/fulltext?series=Sup&amp;vol=16&amp;aid=1-A52">10.5506/APhysPolBSupp.16.1-A52</a> 
 <code>arXiv</code>: <a href="https://www.actaphys.uj.edu.pl/fulltext?series=Sup&amp;vol=16&amp;aid=1-A52">2209.04345</a>.</p>
@@ -470,8 +494,8 @@ lattice QCD", Acta Phys. Pol. B Proc. Suppl. 16, 1-A52, <code>DOI</code>:
 <details class="note">
 <summary>Presentations</summary>
 <ul>
-<li><a href="../pdfs/pres_LAT5.pdf">Searching for the QCD critical point using Lee-Yang edge singularities</a></li>
-<li><a href="../pdfs/CPOD.pdf">Searching for the QCD critical point using Lee-Yang edge singularities</a></li>
+<li><a href="../pdfs/2024_UIC.pdf">UIC High Energy Physics Seminar</a></li>
+<li><a href="../pdfs/2024_MUSES.pdf">MUSES Seminar</a></li>
 </ul>
 </details>
 <h2 id="qcd-phase-diagram-at-non-zero-real-baryon-chemical-potential">QCD phase diagram at non-zero real baryon chemical potential</h2>
@@ -484,16 +508,24 @@ location of a possible critical endpoint in the QCD phase diagram. We also use
 <summary>Publications</summary>
 <ul>
 <li>
-<p>2023: D. Bollweg, D. A. Clarke, J. Goswami, O. Kaczmarek, F. Karsch
-<em>et al.</em>, "Equation of state and speed of sound of (2+1)-flavor QCD
+<p>2023: D. A. Clarke, J. Goswami, F. Karsch, and P. Petreczky.
+"QCD material parameters at zero and non-zero chemical potential from the
+lattice",
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2312.16703">2312.16703</a>.</p>
+</li>
+<li>
+<p>2023: D. Bollweg, D. A. Clarke, J. Goswami, O. Kaczmarek, F. Karsch <em>et al.</em><br />
+"Equation of state and speed of sound of (2+1)-flavor QCD
 in strangeness-neutral matter at non-vanishing net baryon-number
 density" 
 <code>DOI</code>: <a href="https://doi.org/10.1103/PhysRevD.108.014510">10.1103/PhysRevD.108.014510</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2212.09043">2212.09043</a>.</p>
 </li>
 <li>
-<p>2022: D. A. Clarke, "Isothermal and isentropic speed of sound in (2+1)-flavor
-QCD at non-zero baryon chemical potential" PoS(LATTICE2022)147,
+<p>2022: D. A. Clarke. 
+"Isothermal and isentropic speed of sound in (2+1)-flavor
+QCD at non-zero baryon chemical potential",
+PoS(LATTICE2022)147,
 <code>DOI</code>: <a href="https://doi.org/10.22323/1.430.0147">10.22323/1.430.0147</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2212.10009">2212.10009</a>.</p>
 </li>
@@ -523,28 +555,30 @@ QCD at non-zero baryon chemical potential" PoS(LATTICE2022)147,
 <li>
 <p>2021: D. A. Clarke, O. Kaczmarek, F. Karsch, A. Lahiri, and M. Sarkar.
 "Imprint of chiral symmetry restoration on the Polyakov loop and
-the heavy quark free energy", 396 PoS(LATTICE2021)184, <code>DOI</code>:
+the heavy quark free energy", 
+PoS(LATTICE2021)184, <code>DOI</code>:
 <a href="https://pos.sissa.it/396/184/">10.22323/1.396.0184</a> 
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2111.09844">2111.09844</a>.</p>
 </li>
 <li>
-<p>2021: D. A. Clarke, O. Kaczmarek, A. Lahiri, and M. Sarkar. "Sensitivity of
-the Polyakov loop to chiral symmetry restoration", Acta Phys. Pol. B
+<p>2021: D. A. Clarke, O. Kaczmarek, A. Lahiri, and M. Sarkar. 
+"Sensitivity of the Polyakov loop to chiral symmetry restoration", 
+Acta Phys. Pol. B
 Proc. Suppl. 14, 311 <code>DOI</code>: 
 <a href="https://doi.org/10.5506/APhysPolBSupp.14.311">10.5506/APhysPolBSupp.14.311</a> 
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2010.15825">2010.15825</a>.</p>
 </li>
 <li>
-<p>2021: D. A. Clarke, O. Kaczmarek, F. Karsch, A. Lahiri, and M.
-Sarkar. "Sensitivity of the Polyakov loop and related observ-
-ables to chiral symmetry restoration", Phys. Rev. D, 103 <code>DOI</code>:
+<p>2021: D. A. Clarke, O. Kaczmarek, F. Karsch, A. Lahiri, and M. Sarkar. 
+"Sensitivity of the Polyakov loop and related observables to chiral symmetry restoration", 
+Phys. Rev. D, 103 <code>DOI</code>:
 <a href="https://doi.org/10.1103/PhysRevD.103.L011501">10.1103/PhysRevD.103.L011501</a> 
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2008.11678">2008.11678</a>.</p>
 </li>
 <li>
 <p>2020: D. A. Clarke, O. Kaczmarek, F. Karsch, and A. Lahiri.
 "Polyakov loop susceptibility and correlators in the chiral limit",
-363 PoS(LATTICE2019) 194, <code>DOI</code>: 
+PoS(LATTICE2019)194, <code>DOI</code>: 
 <a href="https://doi.org/10.22323/1.363.0194">10.22323/1.363.0194</a> 
 <code>arXiv</code>: <a href="https://arxiv.org/abs/1911.07668">1911.07668</a>.</p>
 </li>
@@ -572,14 +606,16 @@ ables to chiral symmetry restoration", Phys. Rev. D, 103 <code>DOI</code>:
 <summary>Publications</summary>
 <ul>
 <li>
-<p>2018: B. A. Berg and D. A. Clarke, "Topological charge and cooling scales
-in pure SU(2) lattice gauge theory", Phys. Rev. D, 97, <code>DOI</code>:
-<a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.97.054506">10.1103/PhysRevD.97.054506</a> 
+<p>2018: B. A. Berg and D. A. Clarke. 
+"Topological charge and cooling scales in pure SU(2) lattice gauge theory", 
+Phys. Rev. D, 97, 
+<code>DOI</code>: <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.97.054506">10.1103/PhysRevD.97.054506</a> 
 <code>arXiv</code>: <a href="https://arxiv.org/abs/1710.09474">1710.09474</a>.</p>
 </li>
 <li>
-<p>2017: B. A. Berg and D. A. Clarke, "Deconfinement, gradient, and cooling
-scales for pure SU(2) lattice gauge theory", Phys. Rev. D, 95, <code>DOI</code>:
+<p>2017: B. A. Berg and D. A. Clarke. 
+"Deconfinement, gradient, and cooling scales for pure SU(2) lattice gauge theory", 
+Phys. Rev. D, 95, <code>DOI</code>:
 <a href="https://journals.aps.org/prd/abstract/10.1103/PhysRevD.95.094508">10.1103/PhysRevD.95.094508</a> 
 <code>arXiv</code>: <a href="https://arxiv.org/abs/1612.07347">1612.07347</a>.</p>
 </li>
@@ -602,15 +638,14 @@ scales for pure SU(2) lattice gauge theory", Phys. Rev. D, 95, <code>DOI</code>:
 <details class="note">
 <summary>Publications</summary>
 <ul>
-<li>2023: L. Mazur, D. Bollweg, D. A. Clarke, L. Altenkort, O. Kaczmarek
-<em>et al.</em>,
-      "SIMULATeQCD: A simple multi-GPU lattice code for QCD calculations",
-      <code>arXiv</code>:
-           <a href="https://arxiv.org/abs/2306.01098">2306.01098</a>.</li>
-<li>2021: D. Bollweg, L. Altenkort, D. A. Clarke, O. Kaczmarek, L. Mazur
-<em>et al.</em>,
-      "HotQCD on Multi-GPU Systems",
-      396 PoS(LATTICE2021)196,
+<li>2023: L. Mazur, D. Bollweg, D. A. Clarke, L. Altenkort, O. Kaczmarek <em>et al.</em> 
+"SIMULATeQCD: A simple multi-GPU lattice code for QCD calculations",
+Comput. Phys. Commun, 300, 
+<code>DOI</code>:<a href="https://doi.org/10.1016/j.cpc.2024.109164">10.1016/j.cpc.2024.109164</a>, 
+<code>arXiv</code>:<a href="https://arxiv.org/abs/2306.01098">2306.01098</a>.</li>
+<li>2021: D. Bollweg, L. Altenkort, D. A. Clarke, O. Kaczmarek, L. Mazur <em>et al.</em>
+"HotQCD on Multi-GPU Systems",
+      PoS(LATTICE2021)196,
       <code>DOI</code>:
            <a href="https://pos.sissa.it/396/196/">0.22323/1.396.0196</a>
       <code>arXiv</code>:
@@ -626,10 +661,12 @@ and it also includes moderate interfacing with HotQCD and MILC software.</p>
 <details class="note">
 <summary>Publications</summary>
 <ul>
-<li>2023: L. Altenkort, D. A. Clarke, J. Goswami, H. Sandmeyer,
-"Streamlined data analysis in Python"
+<li>2023: L. Altenkort, D. A. Clarke, J. Goswami, H. Sandmeyer.
+"Streamlined data analysis in Python", 
+PoS(LATTICE2023)136,
+      <code>DOI</code>: <a href="https://doi.org/10.22323/1.453.0136">10.22323/1.453.0136</a>
       <code>arXiv</code>:
-           <a href="https://arxiv.org/abs/2308.06652">2308.06652</a></li>
+           <a href="https://arxiv.org/abs/2308.06652">2308.06652</a>.</li>
 </ul>
 </details>
 
