update some proceedings

--- a/site/research/index.html
+++ b/site/research/index.html
@@ -453,19 +453,25 @@ out this situation.</p>
 <ul>
 <li>
 <p>2024: F. Di Renzo, D. A. Clarke, P. Dimopoulos, C. Schmidt, J. Goswami <em>et al.</em>
- "Detecting Lee-Yang/Fisher singularities by multi-point Padè",
+"Detecting Lee-Yang/Fisher singularities by multi-point Padè",
+453 PoS(LATTICE2023)169,
+<code>DOI</code>: <a href="https://doi.org/10.22323/1.453.0169">10.22323/1.453.0169</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2401.09619">2401.09619</a></p>
 </li>
 <li>
 <p>2024: D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami, C. Schmidt <em>et al.</em> 
 "Searching for the QCD critical point using Lee-Yang edge 
 singularities",
+453 PoS(LATTICE2023)168,
+<code>DOI</code>: <a href="https://doi.org/10.22323/1.453.0168">10.22323/1.453.0168</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2401.08820">2401.08820</a></p>
 </li>
 <li>
 <p>2024: C. Schmidt, D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami <em>et al.</em> 
 "Universal scaling and the asymptotic behaviour of Fourier 
 coefficients of the baryon-number density in QCD",
+453 PoS(LATTICE2023)167,
+<code>DOI</code>: <a href="https://doi.org/10.22323/1.453.0167">10.22323/1.453.0167</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2401.07790">2401.07790</a></p>
 </li>
 <li>
@@ -478,7 +484,7 @@ Machine Learning Techniques in (2+1)-flavor QCD",
 <p>2023: K. Zambello, D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami <em>et al.</em> 
 "Determination of Lee-Yang edge singularities in QCD by rational
 approximations", 
-PoS(LATTICE2022)164, 
+430 PoS(LATTICE2022)164, 
 <code>DOI</code>: <a href="https://doi.org/10.22323/1.430.0164">10.22323/1.430.0164</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2301.03952">2301.03952</a>.</p>
 </li>
@@ -525,7 +531,7 @@ density"
 <p>2022: D. A. Clarke. 
 "Isothermal and isentropic speed of sound in (2+1)-flavor
 QCD at non-zero baryon chemical potential",
-PoS(LATTICE2022)147,
+430 PoS(LATTICE2022)147,
 <code>DOI</code>: <a href="https://doi.org/10.22323/1.430.0147">10.22323/1.430.0147</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2212.10009">2212.10009</a>.</p>
 </li>
@@ -556,7 +562,7 @@ PoS(LATTICE2022)147,
 <p>2021: D. A. Clarke, O. Kaczmarek, F. Karsch, A. Lahiri, and M. Sarkar.
 "Imprint of chiral symmetry restoration on the Polyakov loop and
 the heavy quark free energy", 
-PoS(LATTICE2021)184, <code>DOI</code>:
+396 PoS(LATTICE2021)184, <code>DOI</code>:
 <a href="https://pos.sissa.it/396/184/">10.22323/1.396.0184</a> 
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2111.09844">2111.09844</a>.</p>
 </li>
@@ -578,7 +584,7 @@ Phys. Rev. D, 103 <code>DOI</code>:
 <li>
 <p>2020: D. A. Clarke, O. Kaczmarek, F. Karsch, and A. Lahiri.
 "Polyakov loop susceptibility and correlators in the chiral limit",
-PoS(LATTICE2019)194, <code>DOI</code>: 
+363 PoS(LATTICE2019)194, <code>DOI</code>: 
 <a href="https://doi.org/10.22323/1.363.0194">10.22323/1.363.0194</a> 
 <code>arXiv</code>: <a href="https://arxiv.org/abs/1911.07668">1911.07668</a>.</p>
 </li>
@@ -645,7 +651,7 @@ Comput. Phys. Commun, 300,
 <code>arXiv</code>:<a href="https://arxiv.org/abs/2306.01098">2306.01098</a>.</li>
 <li>2021: D. Bollweg, L. Altenkort, D. A. Clarke, O. Kaczmarek, L. Mazur <em>et al.</em>
 "HotQCD on Multi-GPU Systems",
-      PoS(LATTICE2021)196,
+      396 PoS(LATTICE2021)196,
       <code>DOI</code>:
            <a href="https://pos.sissa.it/396/196/">0.22323/1.396.0196</a>
       <code>arXiv</code>:
@@ -663,7 +669,7 @@ and it also includes moderate interfacing with HotQCD and MILC software.</p>
 <ul>
 <li>2023: L. Altenkort, D. A. Clarke, J. Goswami, H. Sandmeyer.
 "Streamlined data analysis in Python", 
-PoS(LATTICE2023)136,
+453 PoS(LATTICE2023)136,
       <code>DOI</code>: <a href="https://doi.org/10.22323/1.453.0136">10.22323/1.453.0136</a>
       <code>arXiv</code>:
            <a href="https://arxiv.org/abs/2308.06652">2308.06652</a>.</li>
