--- a/site/research/index.html
+++ b/site/research/index.html
@@ -540,6 +540,7 @@ QCD at non-zero baryon chemical potential",
 <details class="note">
 <summary>Presentations</summary>
 <ul>
+<li><a href="../pdfs/2024_RIKEN.pdf">QCD material parameters from the lattice</a></li>
 <li><a href="../pdfs/pres_LAT4.pdf">Isothermal and isentropic speed of sound in (2+1)-flavor QCD at non-zero baryon chemical potential</a></li>
 <li><a href="../pdfs/pres_QM2023.pdf">QCD material parameters at non-zero chemical potential from the lattice</a></li>
 </ul>
