quark matter proceeding

--- a/site/research/index.html
+++ b/site/research/index.html
@@ -589,9 +589,11 @@ location of a possible critical endpoint in the QCD phase diagram. We also use
 <summary>Publications</summary>
 <ul>
 <li>
-<p>2023: D. A. Clarke, J. Goswami, F. Karsch, and P. Petreczky.
+<p>2024: D. A. Clarke, J. Goswami, F. Karsch, and P. Petreczky.
 "QCD material parameters at zero and non-zero chemical potential from the
 lattice",
+EPJ Web Conf. 296 (2024) 14005
+<code>DOI</code>: <a href="https://doi.org/10.1051/epjconf/202429614005">10.1051/epjconf/202429614005</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2312.16703">2312.16703</a>.</p>
 </li>
 <li>
