--- a/site/research/index.html
+++ b/site/research/index.html
@@ -502,11 +502,17 @@ to the muon's response to an external magnetic field. The hadronic vacuum
 polarization (HVP) is a contribution that is not calculable perturbatively, but
 it can be computed on the lattice and using so-called data-driven approaches.
 A state-of-the-art determination from Fermilab places experimental
-searches for <span class="arithmatex">\(a_\mu\)</span> at <span class="arithmatex">\(4.2\sigma\)</span> tension against data-driven theoretical
+searches for <span class="arithmatex">\(a_\mu\)</span> in significant tension with data-driven theoretical
 methods. Almost simultaneously, a lattice determination of the HVP contribution
 places <span class="arithmatex">\(a_\mu\)</span> between these two values, favoring the experimental result.
 We perform an independent lattice calculation of the HVP to help sort
 out this situation.</p>
+<details class="note">
+<summary>Presentations</summary>
+<ul>
+<li><a href="../pdfs/2024_LATTICE.pdf">Disconnected contribution to the muon <span class="arithmatex">\(g-2\)</span> HVP</a></li>
+</ul>
+</details>
 <h2 id="qcd-phase-diagram-at-pure-imaginary-baryon-chemical-potential">QCD phase diagram at pure imaginary baryon chemical potential</h2>
 <p>At <span class="arithmatex">\(\mu_B&gt;0\)</span>, the lattice QCD Boltzmann factor becomes complex, rendering
             simulation through Markov chains no longer viable.
