update resume a little

--- a/site/research/index.html
+++ b/site/research/index.html
@@ -527,16 +527,22 @@ out this situation.</p>
 <summary>Publications</summary>
 <ul>
 <li>
+<p>2024: S. Singh, F. Di Renzo, D. A. Clarke, P. Dimopoulos, J. Goswami <em>et al.</em>
+"What we can learn about Lee-Yang zeros from lattice simulations of QCD",
+PoS EuroPLEx2023 (2024) 025,
+<code>DOI</code>: <a href="https://doi.org/10.22323/1.451.0025">10.22323/1.451.0025</a>.</p>
+</li>
+<li>
 <p>2024: D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami, C. Schmidt <em>et al.</em> 
 "Searching for the QCD critical point using multi-point Padé approximations",
-<code>arXiv</code>: <a href="https://arxiv.org/abs/2405.10196">2405.10196</a></p>
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2405.10196">2405.10196</a>.</p>
 </li>
 <li>
 <p>2024: F. Di Renzo, D. A. Clarke, P. Dimopoulos, C. Schmidt, J. Goswami <em>et al.</em>
 "Detecting Lee-Yang/Fisher singularities by multi-point Padè",
 453 PoS(LATTICE2023)169,
 <code>DOI</code>: <a href="https://doi.org/10.22323/1.453.0169">10.22323/1.453.0169</a>
-<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.09619">2401.09619</a></p>
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.09619">2401.09619</a>.</p>
 </li>
 <li>
 <p>2024: D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami, C. Schmidt <em>et al.</em> 
@@ -544,7 +550,7 @@ out this situation.</p>
 singularities",
 453 PoS(LATTICE2023)168,
 <code>DOI</code>: <a href="https://doi.org/10.22323/1.453.0168">10.22323/1.453.0168</a>
-<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.08820">2401.08820</a></p>
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.08820">2401.08820</a>.</p>
 </li>
 <li>
 <p>2024: C. Schmidt, D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami <em>et al.</em> 
@@ -552,13 +558,15 @@ singularities",
 coefficients of the baryon-number density in QCD",
 453 PoS(LATTICE2023)167,
 <code>DOI</code>: <a href="https://doi.org/10.22323/1.453.0167">10.22323/1.453.0167</a>
-<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.07790">2401.07790</a></p>
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.07790">2401.07790</a>.</p>
 </li>
 <li>
 <p>2024: J. Goswami, D. A. Clarke, P. Dimopoulos, F. Di Renzo, C. Schmidt <em>et al.</em> 
 "Exploring the Critical Points in QCD with Multi-Point Padé and 
 Machine Learning Techniques in (2+1)-flavor QCD",
-<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.05651">2401.05651</a></p>
+EPJ Web Conf. 296, 06007,
+<code>DOI</code>: <a href="https://doi.org/10.1051/epjconf/202429606007">10.1051/epjconf/202429606007</a>
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2401.05651">2401.05651</a>.</p>
 </li>
 <li>
 <p>2023: K. Zambello, D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami <em>et al.</em> 
