--- a/site/research/index.html
+++ b/site/research/index.html
@@ -508,6 +508,14 @@ places <span class="arithmatex">\(a_\mu\)</span> between these two values, favor
 We perform an independent lattice calculation of the HVP to help sort
 out this situation.</p>
 <details class="note">
+<summary>Publications</summary>
+<ul>
+<li>2024: A. Bazavov, D. A. Clarke, C. T. H. Davies, C. DeTar, A. X. El-Khadra <em>et al.</em>
+"Hadronic vacuum polarization for the muon <span class="arithmatex">\(g-2\)</span> from lattice QCD: Complete short and intermediate windows",
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2411.09656">2411.09656</a>.</li>
+</ul>
+</details>
+<details class="note">
 <summary>Presentations</summary>
 <ul>
 <li><a href="../pdfs/2024_LATTICE.pdf">Disconnected contribution to the muon <span class="arithmatex">\(g-2\)</span> HVP</a></li>
