--- a/site/index.html
+++ b/site/index.html
@@ -334,15 +334,13 @@ Lattice field theory is a framework that is especially well suited for computer 
 it exists in a state known as <a href="https://en.wikipedia.org/wiki/Quark%E2%80%93gluon_plasma">quark-gluon plasma</a> (QGP). Physicists are interested in QGP, 
 in part because it dominated the early universe, a fraction of a second after the Big Bang. QGP can be probed in heavy ion experiments, 
 which are carried out at <a href="https://home.cern/science/physics/heavy-ions-and-quark-gluon-plasma">CERN</a> and <a href="https://www.bnl.gov/rhic/">Brookhaven</a>.</p>
-<p>Right now I’m working as a postdoc at <a href="https://www.physics.utah.edu/">University of Utah</a>. I’m going to help with lattice input to a calculation of 
+<p>Right now I’m working as a postdoc at <a href="https://www.physics.utah.edu/">University of Utah</a>. I help with lattice input to a calculation of 
 the <a href="https://en.wikipedia.org/wiki/Anomalous_magnetic_dipole_moment">anomalous magnetic moment</a> of the <a href="https://en.wikipedia.org/wiki/Muon">muon</a>, <span class="arithmatex">\(a_\mu\)</span>.
-Part of <span class="arithmatex">\(a_\mu\)</span> can be calculated using either lattice methods or so-called dispersive methods, the latter of which have extremely tight
+Parts of <span class="arithmatex">\(a_\mu\)</span> can be calculated using either lattice methods or so-called dispersive methods, the latter of which have extremely tight
 error bars commensurate with experimental error. There is some discrepancy between the <span class="arithmatex">\(a_\mu\)</span> determined using dispersive input and
 <span class="arithmatex">\(a_\mu\)</span> measured in experiment. If this discrepancy were confirmed, it would be exciting to the physics community, since it would indicate
 a specific region where our current theory of particle physics, the <a href="https://en.wikipedia.org/wiki/Standard_Model">Standard Model</a>, 
-breaks down. Interestingly however, a recent calculation
-of <span class="arithmatex">\(a_\mu\)</span> using lattice input falls between experiment and the dispersive approach, slightly favoring experiment. We're trying to help
-sort this out. </p>
+breaks down. I am helping with lattice determinations of the hadronic-vacuum-polarization contribution to <span class="arithmatex">\(a_\mu\)</span>. </p>
 
 
 
