--- a/site/research/index.html
+++ b/site/research/index.html
@@ -515,16 +515,26 @@
 <p>My research interests are all connected by lattice field theory, but they span several topics within high energy
 theory and software development. I try to describe each project and link some relevant literature.</p>
 <h2 id="hvp-contribution-to-muon-anomalous-magnetic-moment">HVP contribution to muon anomalous magnetic moment</h2>
-<p>The anomalous magnetic moment <span class="arithmatex">\(a_\mu\)</span> gives the Standard Model correction
-to the muon's response to an external magnetic field. The hadronic vacuum
-polarization (HVP) is a contribution that is not calculable perturbatively, but
-it can be computed on the lattice and using so-called data-driven approaches.
-A state-of-the-art determination from Fermilab places experimental
-searches for <span class="arithmatex">\(a_\mu\)</span> in significant tension with data-driven theoretical
-methods. Almost simultaneously, a lattice determination of the HVP contribution
-places <span class="arithmatex">\(a_\mu\)</span> between these two values, favoring the experimental result.
-We perform an independent lattice calculation of the HVP to help sort
-out this situation.</p>
+<p>The muon anomalous magnetic moment <span class="arithmatex">\(a_\mu\)</span> has been measured to extremely high
+precision, most recently at Fermilab by the Muon <span class="arithmatex">\(g-2\)</span> collaboration.
+On the theoretical side, it can be subdivided into QED, electroweak, and
+hadronic contributions, the latter of which cannot be obtained perturbatively.
+The hadronic vacuum polarization (HVP) contribution 
+can be computed using lattice QCD or using the dispersive method,
+a data-driven approach that takes experimentally measured cross sections as
+input. <span class="arithmatex">\(a_\mu\)</span> has been of particular interest to the community,
+as state-of-the-art experimental results compared to theoretical
+results extracted using the dispersive approach exhibited about
+<span class="arithmatex">\(4.2\sigma\)</span> tension in 2020. If that discrepancy
+were confirmed, it may indicate another possible signal for physics beyond
+the Standard Model (SM). 
+Since then, a lattice determination by the BMW Collaboration fell
+between the dispersive and experimental results,
+which has been updated to favor the experimental 
+result, albeit using some additional experimental input.
+Meanwhile the situation for the dispersive approach
+has become somewhat ambiguous, as new measurements from CMD-3 lie in tension with older results.
+Independent lattice input is urgently needed, and I help the Fermilab-HPQCD-MILC collaboration to that end. </p>
 <details class="note">
 <summary>Publications</summary>
 <ul>
@@ -539,7 +549,7 @@ out this situation.</p>
 <details class="note">
 <summary>Presentations</summary>
 <ul>
-<li><a href="../pdfs/2024_LATTICE.pdf">Disconnected contribution to the muon <span class="arithmatex">\(g-2\)</span> HVP</a></li>
+<li><a href="../pdfs/2024_LATTICE.pdf">Disconnected contribution to the muon <span class="arithmatex">\(g-2\)</span> HVP (Lattice2023)</a></li>
 </ul>
 </details>
 <h2 id="qcd-phase-diagram-at-pure-imaginary-baryon-chemical-potential">QCD phase diagram at pure imaginary baryon chemical potential</h2>
@@ -617,9 +627,9 @@ lattice QCD", Acta Phys. Pol. B Proc. Suppl. 16, 1-A52, <code>DOI</code>:
 <details class="note">
 <summary>Presentations</summary>
 <ul>
-<li><a href="../pdfs/2024_RHICBES.pdf">RHIC-BES Online Seminar Series</a></li>
-<li><a href="../pdfs/2024_UIC.pdf">UIC High Energy Physics Seminar</a></li>
-<li><a href="../pdfs/2024_MUSES.pdf">MUSES Seminar</a></li>
+<li><a href="../pdfs/2024_RHICBES.pdf">Locating the Critical Point Using Lattice QCD (RHIC-BES Seminar)</a></li>
+<li><a href="../pdfs/2024_UIC.pdf">Searching for the QCD Critical Point Using LYE (UIC HEP Seminar)</a></li>
+<li><a href="../pdfs/2024_MUSES.pdf">Searching for the QCD Critical Point Using LYE (MUSES Seminar)</a></li>
 </ul>
 </details>
 <h2 id="qcd-phase-diagram-at-non-zero-real-baryon-chemical-potential">QCD phase diagram at non-zero real baryon chemical potential</h2>
@@ -660,9 +670,10 @@ QCD at non-zero baryon chemical potential",
 <details class="note">
 <summary>Presentations</summary>
 <ul>
-<li><a href="../pdfs/2024_RIKEN.pdf">QCD material parameters from the lattice</a></li>
-<li><a href="../pdfs/pres_LAT4.pdf">Isothermal and isentropic speed of sound in (2+1)-flavor QCD at non-zero baryon chemical potential</a></li>
-<li><a href="../pdfs/pres_QM2023.pdf">QCD material parameters at non-zero chemical potential from the lattice</a></li>
+<li><a href="../pdfs/2025_BNL.pdf">QCD material parameters from the lattice (BNL)</a></li>
+<li><a href="../pdfs/2024_RIKEN.pdf">QCD material parameters from the lattice (RIKEN)</a></li>
+<li><a href="../pdfs/pres_QM2023.pdf">QCD material parameters at non-zero chemical potential from the lattice (Quark Matter)</a></li>
+<li><a href="../pdfs/pres_LAT4.pdf">Isothermal and isentropic speed of sound in (2+1)-flavor QCD at non-zero baryon chemical potential (Lattice2022)</a></li>
 </ul>
 </details>
 <h2 id="deep-learning-phases-of-matter">Deep learning phases of matter</h2>
@@ -727,10 +738,10 @@ Phys. Rev. D, 103 <code>DOI</code>:
 <details class="note">
 <summary>Presentations</summary>
 <ul>
-<li><a href="../pdfs/pres_LAT2.pdf">Polyakov Loop Susceptibility and Correlators in the Chiral Limit</a></li>
-<li><a href="../pdfs/pres_CRITICAL.pdf">Sensitivity of the Polyakov Loop to Chiral Symmetry Restoration</a></li>
-<li><a href="../pdfs/pres_CRC2020.pdf">Energy-like observables in the chiral limit</a></li>
-<li><a href="../pdfs/pres_LAT3.pdf">Imprint of Chiral Symmetry Restoration on the Polyakov Loop and Heavy Quark Free Energy</a></li>
+<li><a href="../pdfs/pres_LAT2.pdf">Polyakov Loop Susceptibility and Correlators in the Chiral Limit (Lattice2019)</a></li>
+<li><a href="../pdfs/pres_CRITICAL.pdf">Sensitivity of the Polyakov Loop to Chiral Symmetry Restoration (Criticality in QCD)</a></li>
+<li><a href="../pdfs/pres_CRC2020.pdf">Energy-like observables in the chiral limit (CRC-TR211 Colloquium)</a></li>
+<li><a href="../pdfs/pres_LAT3.pdf">Imprint of Chiral Symmetry Restoration on the Polyakov Loop and Heavy Quark Free Energy (Lattice2021)</a></li>
 </ul>
 </details>
 <h2 id="topology-in-pure-sun-lattice-gauge-theory">Topology in pure SU(N) lattice gauge theory</h2>
@@ -764,8 +775,8 @@ Phys. Rev. D, 95, <code>DOI</code>:
 <details class="note">
 <summary>Presentations</summary>
 <ul>
-<li><a href="../pdfs/pres_LAT1.pdf">Estimates of scaling violations for pure SU(2) LGT</a></li>
-<li><a href="../pdfs/aps.pdf">Topological Charge and Cooling Scales in Pure SU(2) Lattice Gauge Theory</a></li>
+<li><a href="../pdfs/pres_LAT1.pdf">Estimates of scaling violations for pure SU(2) LGT (Lattice2017)</a></li>
+<li><a href="../pdfs/aps.pdf">Topological Charge and Cooling Scales in Pure SU(2) Lattice Gauge Theory (APS April Meeting 2018)</a></li>
 </ul>
 </details>
 <h2 id="simulateqcd">SIMULATeQCD</h2>
