--- a/site/research/index.html
+++ b/site/research/index.html
@@ -545,7 +545,10 @@ Independent lattice input is urgently needed, and I help the Fermilab-HPQCD-MILC
 <details class="note">
 <summary>Publications</summary>
 <ul>
-<li>2024: A. Bazavov, C. W. Bernard, D. A. Clarke, C. T. H. Davies, C. DeTar, <em>et al.</em>
+<li>2025: R. Aliberti, T. Aoyama, E. Balzani, A. Bashir, G. Benton <em>et al.</em>
+"The anomalous magnetic moment of the muon in the Standard Model: an update",
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2505.21476">2505.21476</a>.</li>
+<li>2024: A. Bazavov, C. W. Bernard, D. A. Clarke, C. T. H. Davies, C. DeTar <em>et al.</em>
 "Hadronic vacuum polarization for the muon <span class="arithmatex">\(g-2\)</span> from lattice QCD: Long-distance and full light-quark connected contribution"
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2412.18491">2412.18491</a>.</li>
 <li>2024: A. Bazavov, D. A. Clarke, C. T. H. Davies, C. DeTar, A. X. El-Khadra <em>et al.</em>
