--- a/site/outreach/index.html
+++ b/site/outreach/index.html
@@ -429,7 +429,7 @@
 <h1 id="outreach">Outreach</h1>
 <h2 id="diversity-and-inclusion">Diversity and inclusion</h2>
 <ul>
-<li>2024-present: UoU <a href="https://www.physics.utah.edu/passage/">PASSAGE</a> President </li>
+<li>2024-2025: UoU <a href="https://www.physics.utah.edu/passage/">PASSAGE</a> President </li>
 <li>2023-2024: UoU PASSAGE Member</li>
 <li>2021-2022: CRC-TR211 <a href="https://crc-tr211.org/#Equalitytop">Equal Opportunity Committee</a> Member</li>
 <li>2017-2018: APS Academic Peer Mentor</li>
