--- a/site/research/index.html
+++ b/site/research/index.html
@@ -550,6 +550,7 @@ Independent lattice input is urgently needed, and I help the Fermilab-HPQCD-MILC
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2505.21476">2505.21476</a>.</li>
 <li>2024: A. Bazavov, C. W. Bernard, D. A. Clarke, C. T. H. Davies, C. DeTar <em>et al.</em>
 "Hadronic vacuum polarization for the muon <span class="arithmatex">\(g-2\)</span> from lattice QCD: Long-distance and full light-quark connected contribution"
+<code>DOI</code>: <a href="https://doi.org/10.1103/d583-yhfs">10.1103/d583-yhfs</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2412.18491">2412.18491</a>.</li>
 <li>2024: A. Bazavov, D. A. Clarke, C. T. H. Davies, C. DeTar, A. X. El-Khadra <em>et al.</em>
 "Hadronic vacuum polarization for the muon <span class="arithmatex">\(g-2\)</span> from lattice QCD: Complete short and intermediate windows",
