--- a/site/index.html
+++ b/site/index.html
@@ -334,13 +334,14 @@
 
 
 <h1 id="david-clarke-physicist">David Clarke, Physicist</h1>
-<p>I’m David, a researcher using <a href="https://en.wikipedia.org/wiki/Lattice_field_theory">lattice field theory</a>, to study particle physics. 
+<p>I’m David, a postdoc at <a href="https://www.uni-bielefeld.de/">Bielefeld University</a> using <a href="https://en.wikipedia.org/wiki/Lattice_field_theory">lattice field theory</a> 
+to study strongly interacting matter. 
 Lattice field theory is a framework that is especially well suited for computer simulation.</p>
 <p>One of my research topics is strongly interacting matter at finite temperature and density. When this matter becomes sufficiently hot and dense, 
 it exists in a state known as <a href="https://en.wikipedia.org/wiki/Quark%E2%80%93gluon_plasma">quark-gluon plasma</a> (QGP). Physicists are interested in QGP, 
 in part because it dominated the early universe, a fraction of a second after the Big Bang. QGP can be probed in heavy ion experiments, 
 which are carried out at <a href="https://home.cern/science/physics/heavy-ions-and-quark-gluon-plasma">CERN</a> and <a href="https://www.bnl.gov/rhic/">Brookhaven</a>.</p>
-<p>Right now I’m working as a postdoc at <a href="https://www.physics.utah.edu/">University of Utah</a>. I help with lattice input to a calculation of 
+<p>I also help with lattice input to calculations of 
 the <a href="https://en.wikipedia.org/wiki/Anomalous_magnetic_dipole_moment">anomalous magnetic moment</a> of the <a href="https://en.wikipedia.org/wiki/Muon">muon</a>, <span class="arithmatex">\(a_\mu\)</span>.
 Parts of <span class="arithmatex">\(a_\mu\)</span> can be calculated using either lattice methods or so-called dispersive methods, the latter of which have extremely tight
 error bars commensurate with experimental error. There is some discrepancy between the <span class="arithmatex">\(a_\mu\)</span> determined using dispersive input and
