--- a/site/research/index.html
+++ b/site/research/index.html
@@ -549,11 +549,13 @@ Independent lattice input is urgently needed, and I help the Fermilab-HPQCD-MILC
 "The anomalous magnetic moment of the muon in the Standard Model: an update",
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2505.21476">2505.21476</a>.</li>
 <li>2024: A. Bazavov, C. W. Bernard, D. A. Clarke, C. T. H. Davies, C. DeTar <em>et al.</em>
-"Hadronic vacuum polarization for the muon <span class="arithmatex">\(g-2\)</span> from lattice QCD: Long-distance and full light-quark connected contribution"
+"Hadronic vacuum polarization for the muon <span class="arithmatex">\(g-2\)</span> from lattice QCD: Long-distance and full light-quark connected contribution",
+Phys. Rev. Lett, 135,
 <code>DOI</code>: <a href="https://doi.org/10.1103/d583-yhfs">10.1103/d583-yhfs</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2412.18491">2412.18491</a>.</li>
 <li>2024: A. Bazavov, D. A. Clarke, C. T. H. Davies, C. DeTar, A. X. El-Khadra <em>et al.</em>
 "Hadronic vacuum polarization for the muon <span class="arithmatex">\(g-2\)</span> from lattice QCD: Complete short and intermediate windows",
+Phys. Rev. D, 111,
 <code>DOI</code>: <a href="https://doi.org/10.1103/PhysRevD.111.094508">10.1103/PhysRevD.111.094508</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2411.09656">2411.09656</a>.</li>
 </ul>
@@ -669,8 +671,8 @@ EPJ Web Conf. 296 (2024) 14005
 <li>
 <p>2023: D. Bollweg, D. A. Clarke, J. Goswami, O. Kaczmarek, F. Karsch <em>et al.</em><br />
 "Equation of state and speed of sound of (2+1)-flavor QCD
-in strangeness-neutral matter at non-vanishing net baryon-number
-density" 
+in strangeness-neutral matter at non-vanishing net baryon-number density",
+Phys. Rev. D, 108, 
 <code>DOI</code>: <a href="https://doi.org/10.1103/PhysRevD.108.014510">10.1103/PhysRevD.108.014510</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2212.09043">2212.09043</a>.</p>
 </li>
