anom muon phys rept

--- a/site/research/index.html
+++ b/site/research/index.html
@@ -547,6 +547,8 @@ Independent lattice input is urgently needed, and I help the Fermilab-HPQCD-MILC
 <ul>
 <li>2025: R. Aliberti, T. Aoyama, E. Balzani, A. Bashir, G. Benton <em>et al.</em>
 "The anomalous magnetic moment of the muon in the Standard Model: an update",
+      Phys. Rep., 1143,
+       <code>DOI</code>: <a href="https://doi.org/10.1016/j.physrep.2025.08.002">10.1016/j.physrep.2025.08.002</a>
 <code>arXiv</code>: <a href="https://arxiv.org/abs/2505.21476">2505.21476</a>.</li>
 <li>2024: A. Bazavov, C. W. Bernard, D. A. Clarke, C. T. H. Davies, C. DeTar <em>et al.</em>
 "Hadronic vacuum polarization for the muon <span class="arithmatex">\(g-2\)</span> from lattice QCD: Long-distance and full light-quark connected contribution",
