--- a/site/research/index.html
+++ b/site/research/index.html
@@ -707,6 +707,8 @@ the eventual goal of examining the width of the QCD crossover transition. </p>
 <ul>
 <li>2025: A. Abuali, D. A. Clarke, M. Hjorth-Jensen, I. Konstantinidis, C. Ratti <em>et al.</em> 
   "Deep learning of phase transitions with minimal examples",
+  Phys. Rev. E, 112, 
+  <code>DOI</code>: <a href="https://doi.org/10.1103/wjvx-5nk7">10.1103/wjvx-5nk7</a>
   <code>arXiv</code>: <a href="https://arxiv.org/abs/2501.05547">2501.05547</a>.</li>
 </ul>
 </details>
