--- a/site/research/index.html
+++ b/site/research/index.html
@@ -521,6 +521,11 @@ initial conditions similar to those in HICs.</p>
 <summary>Publications</summary>
 <ul>
 <li>
+<p>2026: D. A. Clarke, H.-T. Ding, J.-B. Gu, S.-T. Li, S. Mukherjee <em>et al.</em>
+"QCD crossover at low temperatures from Lee-Yang edge singularity",
+<code>arXiv</code>: <a href="https://arxiv.org/abs/2601.04782">2601.04782</a>.</p>
+</li>
+<li>
 <p>2025: D. A. Clarke, P. Dimopoulos, F. Di Renzo, J. Goswami, C. Schmidt <em>et al.</em> 
 "Searching for the QCD critical point using multi-point Padé approximations",
 Phys. Rev. D, 112,
