--- a/site/research/index.html
+++ b/site/research/index.html
@@ -597,6 +597,7 @@ Phys. Rev. D, 103 <code>DOI</code>:
 <details class="note">
 <summary>Presentations</summary>
 <ul>
+<li><a href="../pdfs/ICFP.pdf">Generalizing the isothermal compressibility for QCD</a></li>
 <li><a href="../pdfs/2025_BNL.pdf">QCD material parameters from the lattice (BNL)</a></li>
 <li><a href="../pdfs/2024_RHICBES.pdf">Locating the Critical Point Using Lattice QCD (RHIC-BES Seminar)</a></li>
 <li><a href="../pdfs/2024_MUSES.pdf">Searching for the QCD Critical Point Using LYE (MUSES Seminar)</a></li>
